--- a/hammers/vim/vimrc.org
+++ b/hammers/vim/vimrc.org
@@ -9,13 +9,44 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 #+BEGIN_SRC vimrc :tangle (m/resolve "${m/xdg.conf.d}/vim/vimrc")
+  if empty($MYVIMRC) | let $MYVIMRC = expand('<sfile>:p') | endif
+  if empty($XDG_CACHE_HOME)  | let $XDG_CACHE_HOME  = $HOME."/.cache"       | endif
+  if empty($XDG_CONFIG_HOME) | let $XDG_CONFIG_HOME = $HOME."/.config"      | endif
+  if empty($XDG_DATA_HOME)   | let $XDG_DATA_HOME   = $HOME."/.local/share" | endif
+  if empty($XDG_STATE_HOME)  | let $XDG_STATE_HOME  = $HOME."/.local/state" | endif
+
+  set runtimepath^=$XDG_CONFIG_HOME/vim
+  set runtimepath+=$XDG_DATA_HOME/vim
+  set runtimepath+=$XDG_CONFIG_HOME/vim/after
+  set packpath^=$XDG_DATA_HOME/vim
+  set packpath+=$XDG_DATA_HOME/vim/after
+
+  let g:netrw_home = $XDG_DATA_HOME."/vim"
+
+  call mkdir($XDG_DATA_HOME."/vim/spell", 'p', 0700)
+
+  set backupdir=$XDG_STATE_HOME/vim/backup | call mkdir(&backupdir, 'p', 0700)
+  set directory=$XDG_STATE_HOME/vim/swap   | call mkdir(&directory, 'p', 0700)
+  set undodir=$XDG_STATE_HOME/vim/undo     | call mkdir(&undodir,   'p', 0700)
+  set viewdir=$XDG_STATE_HOME/vim/view     | call mkdir(&viewdir,   'p', 0700)
+
+  if !has('nvim') " Neovim has its own location which already complies with XDG specification
+  set viminfofile=$XDG_STATE_HOME/vim/viminfo
+  endif
+
   let mapleader=";"
+  " ########## this section should put before vundle start ###########
+  " disable vi campatible mode (should before vundle)
+  set nocompatible
+  " disable the filetype detect
+  filetype off
+  " ########## this section should put before vundle end ###########
+
 
   " #################vundel config start #####################
-  set viminfo+=n$XDG_CONFIG_HOME/vim/viminfo
-  set rtp+=$XDG_CONFIG_HOME/vim/Vundle.vim
+  set runtimepath+=$XDG_CONFIG_HOME/vim/Vundle.vim
 
-  call vundle#begin($XDG_CONFIG_HOME + '/vim/plugins')
+  call vundle#begin(expand('$XDG_CONFIG_HOME/vim/plugins'))
   Plugin 'ctrlp.vim'
   "Plugin 'Valloric/YouCompleteMe'
   Plugin 'dyng/ctrlsf.vim'
@@ -48,10 +79,9 @@
   call vundle#end()
   " #################vundel config end #####################
 
-  " disable vi campatible mode
-  set nocompatible
-  " disable the filetype detect
-  filetype off 
+  " enable the filetype detect
+  filetype plugin indent on
+   
   " enable syntax highlight
   syntax off
   " highlighted the line which cursor now in
@@ -371,8 +401,7 @@
   nmap <D-c> "*yy
   nmap <D-v> "*P
 
-  " enable the filetype detect
-  filetype plugin indent on
+
   filetype plugin on
   " enable syntax highlight
   syntax on
