fix: mkdir if directory not exists

--- a/hammers/vim/vimrc.org
+++ b/hammers/vim/vimrc.org
@@ -23,12 +23,28 @@
 
   let g:netrw_home = $XDG_DATA_HOME."/vim"
 
-  call mkdir($XDG_DATA_HOME."/vim/spell", 'p', 0700)
+  let spell_dir=$XDG_DATA_HOME."/vim/spell"
+  if !isdirectory(spell_dir)
+     call mkdir(spell_dir, 'p', 0700)
+  endif
 
-  set backupdir=$XDG_STATE_HOME/vim/backup | call mkdir(&backupdir, 'p', 0700)
-  set directory=$XDG_STATE_HOME/vim/swap   | call mkdir(&directory, 'p', 0700)
-  set undodir=$XDG_STATE_HOME/vim/undo     | call mkdir(&undodir,   'p', 0700)
-  set viewdir=$XDG_STATE_HOME/vim/view     | call mkdir(&viewdir,   'p', 0700)
+  set backupdir=$XDG_STATE_HOME/vim/backup
+  set directory=$XDG_STATE_HOME/vim/swap
+  set undodir=$XDG_STATE_HOME/vim/undo
+  set viewdir=$XDG_STATE_HOME/vim/view
+
+  if !isdirectory(&backupdir)
+  call mkdir(&backupdir, 'p', 0700)
+  endif
+  if !isdirectory(&directory)
+     call mkdir(&directory, 'p', 0700)
+  endif
+  if !isdirectory(&undodir)
+     call mkdir(&undodir,   'p', 0700)
+  endif
+  if !isdirectory(&viewdir)
+     call mkdir(&viewdir,   'p', 0700)
+  endif
 
   if !has('nvim') " Neovim has its own location which already complies with XDG specification
   set viminfofile=$XDG_STATE_HOME/vim/viminfo
