--- a/hammers/zsh/config.org
+++ b/hammers/zsh/config.org
@@ -31,7 +31,7 @@
        export DISABLE_AUTO_TITLE=true
 
 
-       mkdir -p ${XDG_CACHE_HOME} ${XDG_DATA_HOME} ${XDG_CONFIG_HOME} ${XDG_STATE_HOME}
+       mkdir -p ${XDG_CACHE_HOME} ${XDG_DATA_HOME}/zsh ${XDG_CONFIG_HOME}/zsh ${XDG_STATE_HOME}/zsh
 
        pathmunge() {
            case ":${PATH}:" in
