--- a/hammers/vim/vimrc.org
+++ b/hammers/vim/vimrc.org
@@ -194,11 +194,6 @@
   "let g:airline#extensions#syntastic#enabled = 1
   " ################################ set the airline end ###################
 
-  " ################################ set vim-colors-solarized start ###################
-  set background=dark
-  colorscheme solarized
-  " ################################ set the vim-colors-solarized end ###################
-
   " ################################ set the async run start ###################
   "let g:asyncrun_mode = 0
   augroup QuickfixStatus
@@ -429,4 +424,9 @@
   filetype plugin on
   " enable syntax highlight
   syntax on
+  " ################################ set vim-colors-solarized start ###################
+  syntax enable
+  set background=dark
+  colorscheme solarized
+  " ################################ set the vim-colors-solarized end ###################
 #+END_SRC
